--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~8.2.14",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-material-timepicker": "^5.2.2",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
     "uuid": "^3.3.3",
