--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true
   }
 }
