--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "@ag-grid-community/angular": "22.0.0",
     "@ag-grid-community/all-modules": "22.0.0",
+    "@ag-grid-community/angular": "22.0.0",
     "@amcharts/amcharts4": "^4.7.9",
     "@angular/animations": "~8.2.14",
     "@angular/cdk": "~8.2.3",
@@ -27,6 +27,7 @@
     "@angular/router": "~8.2.14",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-device-detector": "^1.3.16",
     "ngx-material-timepicker": "^5.2.2",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
