--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "@ag-grid-community/all-modules": "22.0.0",
-    "@ag-grid-community/angular": "22.0.0",
+    "@ag-grid-community/all-modules": "^22.0.0",
+    "@ag-grid-community/angular": "^22.0.0",
     "@amcharts/amcharts4": "^4.7.9",
     "@angular/animations": "~8.2.14",
     "@angular/cdk": "~8.2.3",
